# life

./: README.md
client/: CMakeLists.txt
daemon/: CMakeLists.txt  main.cpp
daemon/include/: ClientConnection.h  Server.h
daemon/src/: ClientConnection.cpp  Server.cpp
src/: ClientManager.cpp  ClientManager.h  NetworkDiscovery.cpp  NetworkDiscovery.h  main.cpp  mainwindow.cpp  mainwindow.h
